--- a/paper/regression_merged_result.tex
+++ b/paper/regression_merged_result.tex
@@ -2,11 +2,12 @@
 \toprule
 {} &  Coef. &  P>|t| \\
 \midrule
-$CC$ to $C$ rate   &  0.013 &    0.0 \\
-$CD$ to $C$ rate   &  0.133 &    0.0 \\
-$DC$ to $C$ rate   &  0.066 &    0.0 \\
-SSE                &  0.100 &    0.0 \\
-$C_r$ / $C_\{min\}$  & -0.026 &    0.0 \\
-$C_r$ / $C_\{mean\}$ &  0.346 &    0.0 \\
+constant           &  0.178 &    0.0 \\
+$CC$ to $C$ rate   & -0.099 &    0.0 \\
+$CD$ to $C$ rate   &  0.129 &    0.0 \\
+$DC$ to $C$ rate   &  0.064 &    0.0 \\
+SSE                &  0.056 &    0.0 \\
+$C_r$ / $C_\{min\}$  & -0.103 &    0.0 \\
+$C_r$ / $C_\{mean\}$ &  0.300 &    0.0 \\
 \bottomrule
 \end{tabular}
