--- a/paper/regression_table.tex
+++ b/paper/regression_table.tex
@@ -2,23 +2,24 @@
 \toprule
 & \multicolumn{2}{g}{Standard} & \multicolumn{2}{c}{Noisy} & \multicolumn{2}{g}{Probabilistic ending} & \multicolumn{2}{c}{Noisy probabilistic ending} & \multicolumn{2}{g}{Overall}\\
 \midrule
-& \multicolumn{2}{g}{\(R\) adjusted: 0.785} & \multicolumn{2}{c}{\(R\) adjusted: 0.895} & \multicolumn{2}{g}{\(R\) adjusted: 0.894} & \multicolumn{2}{c}{\(R\) adjusted: 0.872} & \multicolumn{2}{g}{\(R\) adjusted: 0.802} \\
+& \multicolumn{2}{g}{\(R\) adjusted: 0.541} & \multicolumn{2}{c}{\(R\) adjusted: 0.639} & \multicolumn{2}{g}{\(R\) adjusted: 0.587} & \multicolumn{2}{c}{\(R\) adjusted: 0.577} & \multicolumn{2}{g}{\(R\) adjusted: 0.242} \\
 {} &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value &  Coefficient &  \(p\)-value \\
 \midrule
-$CC$ to $C$ rate   & -0.039 &    0.0 &  0.109 &    0.0 &  0.017 &  0.000 &  0.191 &    0.0 & 0.013 &    0.0 \\
-$CD$ to $C$ rate   &  0.297 &    0.0 & -0.070 &    0.0 &  0.182 &  0.000 & -0.091 &    0.0 & 0.133 &    0.0 \\
-$C_r$ / $C_{max}$  &      - &      - &  0.689 &    0.0 &      - &      - &  0.927 &    0.0 &   - &      -   \\
-$C_r$ / $C_{mean}$ & -0.467 &    0.0 &  0.129 &    0.0 &  0.525 &  0.000 & -0.025 &    0.0 &  0.346 &    0.0\\
-$C_{max}$          &  0.585 &    0.0 &      - &      - & -0.080 &  0.000 &  0.623 &    0.0 &   - &      -   \\
-$C_{mean}$         &  0.175 &    0.0 & -0.085 &    0.0 & -0.022 &  0.001 & -1.337 &    0.0 &   - &      -   \\
-$C_{min}$          & -0.149 &    0.0 & -0.224 &    0.0 & -0.171 &  0.000 &      - &      - &   - &      -   \\
-$C_{min}$ / $C_r$  &  0.072 &    0.0 & -0.174 &    0.0 &  0.125 &  0.000 &      - &      - & -0.026 &    0.0 \\
-$DC$ to $C$ rate   &  0.199 &    0.0 &  0.017 &    0.0 & -0.030 &  0.000 &  0.013 &    0.0 &  0.066 &    0.0 \\
-$k$                &  0.000 &    0.0 &  0.000 &    0.0 &  0.000 &  0.002 & -0.000 &    0.0 &   - &      -   \\
-$n$                &  0.000 &    0.0 &      - &      - &      - &      - &      - &      - &   - &      -   \\
-$p_e$              &      - &      - &      - &      - &  0.000 &  0.892 & -0.133 &    0.0 &   - &      -   \\
-$p_n$              &      - &      - & -0.077 &    0.0 &      - &      - &      - &      - &   - &      -   \\
-SSE                &  0.260 &    0.0 &  0.193 &    0.0 & -0.041 &  0.000 &  0.170 &    0.0 &  0.100 &    0.0 \\
-memory usage       & -0.010 &    0.0 &      - &      - &      - &      - &      - &      - &   - &      -   \\
+$CC$ to $C$ rate   & -0.042 &  0.000 & -0.007 &  0.000 &  0.017 &  0.000 &  0.111 &    0.0 & -0.099 &    0.0 \\
+$CD$ to $C$ rate   &  0.297 &  0.000 & -0.068 &  0.000 &  0.182 &  0.000 &  0.023 &    0.0 &  0.129 &    0.0 \\
+$C_r$ / $C_{max}$  &      - &      - &  1.856 &  0.000 &      - &      - &  1.256 &    0.0 &     - &      - \\
+$C_r$ / $C_{mean}$ & -0.468 &  0.000 & -0.577 &  0.000 &  0.525 &  0.000 & -0.120 &    0.0 &  0.300 &    0.0\\
+$C_{max}$          & -0.071 &  0.000 &      - &      - & -0.022 &  0.391 &  1.130 &    0.0 &   - &      -   \\
+$C_{mean}$         &  0.118 &  0.000 & -2.558 &  0.000 & -0.023 &  0.001 & -1.489 &    0.0 &   - &      -   \\
+$C_{min}$          & -0.161 &  0.000 & -1.179 &  0.000 & -0.170 &  0.000 &      - &      - &   - &      -   \\
+$C_{min}$ / $C_r$  &  0.057 &  0.000 & -0.320 &  0.000 &  0.125 &  0.000 &      - &      - & -0.103 &    0.0 \\
+$DC$ to $C$ rate   &  0.198 &  0.000 &  0.040 &  0.000 & -0.030 &  0.000 &  0.022 &    0.0 &  0.064 &    0.0 \\
+$k$                &  0.000 &  0.319 &  0.000 &  0.020 &  0.000 &  0.002 &  0.000 &    0.0 &   - &      -   \\
+$n$                &  0.000 &  0.000 &      - &      - &      - &      - &      - &      - &   - &      -   \\
+$p_e$              &      - &      - &      - &      - &  0.000 &  0.847 & -0.083 &    0.0 &   - &      -   \\
+$p_n$              &      - &      - & -0.048 &  0.000 &      - &      - &      - &      - &   - &      -   \\
+SSE                &  0.258 &  0.000 &  0.153 &  0.000 & -0.041 &  0.000 &  0.100 &    0.0 &  0.056 &    0.0 \\
+constant           &  0.697 &  0.000 &  1.522 &  0.000 & -0.057 &  0.019 & -0.472 &    0.0 &  0.178 &    0.0 \\
+memory usage       & -0.010 &  0.000 & -0.000 &  0.035 &      - &      - &      - &      - &  - &      -   \\
 \bottomrule
 \end{tabular}
